--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
   </div>
 
   <div class="card__wrapper">
-    <div class="card__widget">
+    <div class="card__preloader">
+      <span class="card__span">L</span>
+      <span class="card__span">o</span>
+      <span class="card__span">a</span>
+      <span class="card__span">d</span>
+      <span class="card__span">i</span>
+      <span class="card__span">n</span>
+      <span class="card__span">g</span>
+      <span class="card__span">.</span>
+      <span class="card__span">.</span>
+      <span class="card__span">.</span>
+    </div>
+    <div class="card__widget" style="display: none;">
 
       <form class="card__form" action="#">
         <label class="card__form-label" for="input"></label>
