--- a/index.html
+++ b/index.html
@@ -16,35 +16,6 @@
 </head>
 
 <body>
-  <div class="modal__window" id="modal">
-    <div class="modal__wrapper">
-      <p class="modal__request-text">
-        Weather For You wants to know your current lacation!
-      </p>
-      <div class="modal__permission">
-        <svg class="modal__location-svg" width="35" height="35" viewBox="0 0 35 35" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M17.5 19.5854C18.0975 19.5854 18.6891 19.4677 19.2412 19.2391C19.7932 19.0104 20.2948 18.6753 20.7173 18.2527C21.1398 17.8302 21.4749 17.3287 21.7036 16.7766C21.9323 16.2246 22.05 15.6329 22.05 15.0354C22.05 14.4379 21.9323 13.8462 21.7036 13.2942C21.4749 12.7422 21.1398 12.2406 20.7173 11.8181C20.2948 11.3956 19.7932 11.0604 19.2412 10.8318C18.6891 10.6031 18.0975 10.4854 17.5 10.4854C16.2932 10.4854 15.1359 10.9648 14.2826 11.8181C13.4293 12.6714 12.95 13.8287 12.95 15.0354C12.95 16.2421 13.4293 17.3995 14.2826 18.2527C15.1359 19.106 16.2932 19.5854 17.5 19.5854V19.5854Z"
-            stroke="black" stroke-width="1.5" />
-          <path
-            d="M5.27907 12.3812C8.15198 -0.247924 26.8624 -0.23334 29.7207 12.3958C31.3978 19.8042 26.7895 26.075 22.7499 29.9542C21.3383 31.3156 19.4537 32.0763 17.4926 32.0763C15.5315 32.0763 13.6469 31.3156 12.2353 29.9542C8.21032 26.075 3.60198 19.7896 5.27907 12.3812V12.3812Z"
-            stroke="black" stroke-width="1.5" />
-        </svg>
-        <p class="modal__permission-text">
-          Permission to know your location
-        </p>
-      </div>
-      <form class="modal__btns" action="#">
-        <button class="modal__access-allowed" type="button" id="allowed">
-          Allow
-        </button>
-        <button class="modal__access-denied" type="button" id="denied">
-          Block
-        </button>
-      </form>
-    </div>
-  </div>
 
   <div class="card__wrapper">
     <div class="card__preloader">
@@ -59,9 +30,9 @@
       <span class="card__span">.</span>
       <span class="card__span">.</span>
     </div>
-    <div class="card__widget" style="display: none;">
+    <div class="card__widget" style="display: none">
 
-      <form class="card__form" action="#">
+      <form class=" card__form" action="#">
         <label class="card__form-label" for="input"></label>
         <input class="card__search-input" id="input" type="text" placeholder="Search..">
         <button class="card__search-submit" type="button" id="button">
@@ -112,14 +83,15 @@
           </span>
         </p>
       </div>
-
-      <div class="card__access-denied" id="access-denied">
-        You don't have permissision
-      </div>
     </div>
+
+    <p class="card__access-denied" id="access-denied">
+      You don't have permissision
+    </p>
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="module"></script>
+  <script src="js/config.js" type="module"></script>
 </body>
 
 </html>
